Fix alignment of ul, ol elements

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -87,8 +87,8 @@ hr {
   height: 3px;
 }
 
-ul {
-  padding-left: 16px;
+ul, ol {
+  padding-left: 19px;
 }
 
 // Header
